[package]
name = "shoot"
version = "0.1.0"
authors = ["Hunter Wittenborn <hunter@hunterwittenborn.com>"]
edition = "2021"
description = "An easy to use CLI to send messages to Matrix servers"
repository = "https://github.com/hwittenborn/shoot"
license = "GPL-3.0-or-later"
keywords = ["matrix"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0.12", features = ["derive", "env"] }
colored = "2.0.0"
exitcode = "1.1.2"
quit = "1.1.4"
hw-msg = "0.2.0"
lazy_static = "1.4.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
matrix-sdk = { version = "0.6.2", features = ["e2e-encryption", "markdown", "rustls-tls", "sled"], default-features = false}